--- a/arch/arm/boot/dts/socfpga.dtsi
+++ b/arch/arm/boot/dts/socfpga.dtsi
@@ -240,13 +240,15 @@
 			compatible = "bosch,d_can";
 			reg = <0xffc00000 0x1000>;
 			interrupts = <0 131 4>;
+			status = "disabled";
 		};
 
 		dcan1: d_can@ffc10000 {
-                        compatible = "bosch,d_can";
-                        reg = <0xffc10000 0x1000>;
-                        interrupts = <0 135 4>;
-                };
+			compatible = "bosch,d_can";
+			reg = <0xffc10000 0x1000>;
+			interrupts = <0 135 4>;
+			status = "disabled";
+		};
 
 		gmac0: ethernet@ff700000 {
 			compatible = "altr,socfpga-stmmac", "snps,dwmac-3.70a", "snps,dwmac";
@@ -256,6 +258,7 @@
 			mac-address = [00 00 00 00 00 00];/* Filled in by U-Boot */
 			clocks = <&emac0_clk>;
 			clock-names = "stmmaceth";
+			status = "disabled";
 		};
 
 		gmac1: ethernet@ff702000 {
@@ -266,6 +269,7 @@
 			mac-address = [00 00 00 00 00 00];/* Filled in by U-Boot */
 			clocks = <&emac1_clk>;
 			clock-names = "stmmaceth";
+			status = "disabled";
 		};
 
 		gpio0: gpio@ff708000 {
@@ -316,44 +320,44 @@
                 };
 
 		i2c0: i2c@ffc04000 {
-                        #address-cells = <1>;
-                        #size-cells = <0>;
-                        compatible = "snps,designware-i2c";
-                        reg = <0xffc04000 0x1000>;
-                        interrupts = <0 158 4>;
-                        emptyfifo_hold_master = <1>;
-                        clocks = <&per_base_clk>;
-                };
+			#address-cells = <1>;
+			#size-cells = <0>;
+			compatible = "snps,designware-i2c";
+			reg = <0xffc04000 0x1000>;
+			interrupts = <0 158 4>;
+			clocks = <&per_base_clk>;
+			status = "disabled";
+		};
 
-                i2c1: i2c@ffc05000 {
-                        #address-cells = <1>;
-                        #size-cells = <0>;
-                        compatible = "snps,designware-i2c";
-                        reg = <0xffc05000 0x1000>;
-                        interrupts = <0 159 4>;
-                        emptyfifo_hold_master = <1>;
-                        clocks = <&per_base_clk>;
-                };
+		i2c1: i2c@ffc05000 {
+			#address-cells = <1>;
+			#size-cells = <0>;
+			compatible = "snps,designware-i2c";
+			reg = <0xffc05000 0x1000>;
+			interrupts = <0 159 4>;
+			clocks = <&per_base_clk>;
+			status = "disabled";
+		};
 
-                i2c2: i2c@ffc06000 {
-                        #address-cells = <1>;
-                        #size-cells = <0>;
-                        compatible = "snps,designware-i2c";
-                        reg = <0xffc06000 0x1000>;
-                        interrupts = <0 160 4>;
-                        emptyfifo_hold_master = <1>;
-                        clocks = <&per_base_clk>;
-                };
+		i2c2: i2c@ffc06000 {
+			#address-cells = <1>;
+			#size-cells = <0>;
+			compatible = "snps,designware-i2c";
+			reg = <0xffc06000 0x1000>;
+			interrupts = <0 160 4>;
+			clocks = <&per_base_clk>;
+			status = "disabled";
+		};
 
-                i2c3: i2c@ffc07000 {
-                        #address-cells = <1>;
-                        #size-cells = <0>;
-                        compatible = "snps,designware-i2c";
-                        reg = <0xffc07000 0x1000>;
-                        interrupts = <0 161 4>;
-                        emptyfifo_hold_master = <1>;
-                        clocks = <&per_base_clk>;
-                };
+		i2c3: i2c@ffc07000 {
+			#address-cells = <1>;
+			#size-cells = <0>;
+			compatible = "snps,designware-i2c";
+			reg = <0xffc07000 0x1000>;
+			interrupts = <0 161 4>;
+			clocks = <&per_base_clk>;
+			status = "disabled";
+		};
 
 		L2: l2-cache@fffef000 {
 			compatible = "arm,pl310-cache";
@@ -490,31 +494,33 @@
 		};
 
 		usb0: usb@ffb00000 {
-				compatible = "snps,dwc-otg";
-				reg = <0xffb00000 0xffff>;
-				interrupts = <0 125 4>;
-				dma-mask = <0xffffffff>;
-				host-rx-fifo-size = <512>;
-				dev-rx-fifo-size = <512>;
-				dev-nperio-tx-fifo-size = <4096>;
-				dev-perio-tx-fifo-size = <512 512 512 512 512 512
-					512 512 512 512 512 512 512 512 512>;
-				dev-tx-fifo-size = <512 512 512 512 512 512
-					512 512 512 512 512 512 512 512 512>;
+			compatible = "snps,dwc-otg";
+			reg = <0xffb00000 0xffff>;
+			interrupts = <0 125 4>;
+			dma-mask = <0xffffffff>;
+			host-rx-fifo-size = <512>;
+			dev-rx-fifo-size = <512>;
+			dev-nperio-tx-fifo-size = <4096>;
+			dev-perio-tx-fifo-size = <512 512 512 512 512 512
+				512 512 512 512 512 512 512 512 512>;
+			dev-tx-fifo-size = <512 512 512 512 512 512
+				512 512 512 512 512 512 512 512 512>;
+			status = "disabled";
 		};
 
 		usb1: usb@ffb40000 {
-				compatible = "snps,dwc-otg";
-				reg = <0xffb40000 0xffff>;
-				interrupts = <0 128 4>;
-				dma-mask = <0xffffffff>;
-				host-rx-fifo-size = <512>;
-				dev-rx-fifo-size = <512>;
-				dev-nperio-tx-fifo-size = <4096>;
-				dev-perio-tx-fifo-size = <512 512 512 512 512 512
-					512 512 512 512 512 512 512 512 512>;
-				dev-tx-fifo-size = <512 512 512 512 512 512
-					512 512 512 512 512 512 512 512 512>;
+			compatible = "snps,dwc-otg";
+			reg = <0xffb40000 0xffff>;
+			interrupts = <0 128 4>;
+			dma-mask = <0xffffffff>;
+			host-rx-fifo-size = <512>;
+			dev-rx-fifo-size = <512>;
+			dev-nperio-tx-fifo-size = <4096>;
+			dev-perio-tx-fifo-size = <512 512 512 512 512 512
+				512 512 512 512 512 512 512 512 512>;
+			dev-tx-fifo-size = <512 512 512 512 512 512
+				512 512 512 512 512 512 512 512 512>;
+			status = "disabled";
 		};
 
 		watchdog0: wd@ffd02000 {
