--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -503,6 +503,12 @@ config ALTERA_SYSID
 	help
 	  This enables Altera System ID soft core driver.
 
+config ALTERA_HWMUTEX
+	tristate "Altera Hardware Mutex"
+	help
+	  This option enables device driver support for Altera Hardware Mutex.
+	  Say Y here if you want to use the Altera hardware mutex support.
+
 source "drivers/misc/c2port/Kconfig"
 source "drivers/misc/eeprom/Kconfig"
 source "drivers/misc/cb710/Kconfig"
