--- a/drivers/misc/Makefile
+++ b/drivers/misc/Makefile
@@ -49,5 +49,6 @@ obj-y				+= lis3lv02d/
 obj-y				+= carma/
 obj-$(CONFIG_USB_SWITCH_FSA9480) += fsa9480.o
 obj-$(CONFIG_ALTERA_STAPL)	+=altera-stapl/
+obj-$(CONFIG_ALTERA_HWMUTEX)	+= altera_hwmutex.o
 obj-$(CONFIG_MAX8997_MUIC)	+= max8997-muic.o
 obj-$(CONFIG_ALTERA_SYSID)	+= altera_sysid.o
